Semantic analysis for Class/Record helpers